--- a/docu/solution.tex
+++ b/docu/solution.tex
@@ -54,3 +54,5 @@ Das zu erstellende Programm sollte nun grob wie folgt ablaufen:
 	\item Das Ende jeder Rede ist der Beginn einer neuen und kann mit dem \lstinline|BREAKINGPOINT| gefunden werden.
 	\item Wurden alle Reden des Dokumentes gefunden sollen sie als JSON Datei gespeichert werden.
 \end{enumerate}
+
+\noindent im GitHub erreichbar unter:\\ \url{https://github.com/htw-projekt-p2p-volltextsuche/textextraction-18}
