--- a/docu/conclusion.tex
+++ b/docu/conclusion.tex
@@ -7,4 +7,4 @@ In den ersten Versuchen wurden Strings, mithilfe von regulären Ausdrücken, in 
 
 \section{Fazit}
 Prinzipiell wurde innerhalb des Projektes eine spezifizierte KI geschrieben, welche Reden aus der 18. Wahllegislaturperiode anhand der frei zugänglichen XML-Dateien\cite{protokolle} verarbeitet und in JSON-Dateien umwandelt. Das Ergebnis ist verwertbar, kann aber noch verbessert werden in Bezug auf Performanz und Formatierung.\\
-Alles in allem wurde das Projektziel erreicht.
+Alles in allem wurde das Projektziel erreicht und ist unter folgendem Link abrufbar:\\ \url{https://github.com/htw-projekt-p2p-volltextsuche/textextraction-18}
