--- a/docu/main.tex
+++ b/docu/main.tex
@@ -63,7 +63,7 @@
 
 \begin{document}
 	\input{syntax_highlighting.tex}
-	\input{commands.tex}
+	\input{commands.tex} %\linenumbers
 	\input{approach.tex}
 	\input{solution.tex}
 	\input{problems.tex}
