--- a/docu/problems.tex
+++ b/docu/problems.tex
@@ -51,7 +51,7 @@ mussten drei reguläre Ausdrücke abgeändert werden damit sie funktionieren.
 
 \section{Personensuche im Inhaltsverzeichnis}
 Der entscheidende Punkt bei der Extraktion war die Suche im Inhaltsverzeichnis nach Personen. Innerhalb der Suche selbst gab es aber Unterschiede die separat abgearbeitet werden mussten.\\
-Die Suche wurde mit der Methode \lstinline|createMap()| in der \lstinline|SpeechSearch|-Klasse implementiert. Der wörtlich Ablauf der Methode sieht grob wie folgt aus:
+Die Suche wurde mit der Methode \lstinline|createMap()| in der \lstinline|SpeechSearch|-Klasse implementiert. Der wörtliche Ablauf der Methode sieht grob wie folgt aus:
 \begin{itemize}[leftmargin=3.5em]
 	\item[\textbf{Wenn}] es einen Titel \gequote{Geschäftsordnung} gibt,
 	\begin{itemize}
